# hufflepuffle

./: CMakeLists.txt
.github/workflows/: build_and_test.yml
include/: huffle.hpp
src/: huffle.cpp  main.cpp
test/: CMakeLists.txt  tests.cpp
